--- a/src/views/orders.ejs
+++ b/src/views/orders.ejs
@@ -85,7 +85,7 @@
                 </div>
             </div>
           </div>
-        <div class="content-card scroll-reveal">
+        <div class="content-card scroll-reveal trend-chart-card">
              <div class="card-content chart-container" style="min-height: 250px;">
                 <canvas id="trendChart"></canvas>
         </div>
